update registry addr

--- a/nginx-short-process/Dockerfile.php-fpm
+++ b/nginx-short-process/Dockerfile.php-fpm
@@ -1,6 +1,6 @@
 FROM bitnami/php-fpm
 
-LABEL maintainer="feiskyer@gmail.com"
+LABEL maintainer="420874756@qq.com"
 
 ENV STRESS_VERSION=1.0.4
 RUN apt-get update && apt-get install -y g++ make curl  && \
