--- a/nginx-short-process/Dockerfile.nginx
+++ b/nginx-short-process/Dockerfile.nginx
@@ -1,6 +1,6 @@
 FROM nginx
 
-LABEL maintainer="feiskyer@gmail.com"
+LABEL maintainer="420874756@qq.com"
 
 ADD app/ /app
 ADD nginx.conf /etc/nginx/nginx.conf
