--- a/nginx-short-process/Makefile
+++ b/nginx-short-process/Makefile
@@ -1,17 +1,17 @@
 .PHONY: run
 run:
-	docker run --name nginx -p 10000:80 -itd feisky/nginx:sp
-	docker run --name phpfpm -itd --network container:nginx feisky/php-fpm:sp
+	docker run --name nginx -p 10000:80 -itd 192.168.200.120/perf/nginx:sp
+	docker run --name phpfpm -itd --network container:nginx 192.168.200.120/perf/php-fpm:sp
 
 .PHONY: build
 build:
-	docker build -t feisky/nginx:sp -f Dockerfile.nginx .
-	docker build -t feisky/php-fpm:sp -f Dockerfile.php-fpm .
+	docker build -t 192.168.200.120/perf/nginx:sp -f Dockerfile.nginx .
+	docker build -t 192.168.200.120/perf/php-fpm:sp -f Dockerfile.php-fpm .
 
 .PHONY: push
 push:
-	docker push feisky/nginx:sp
-	docker push feisky/php-fpm:sp
+	docker push 192.168.200.120/perf/nginx:sp
+	docker push 192.168.200.120/perf/php-fpm:sp
 
 .PHONY: clean
 clean:
