update file path

--- a/io-cached/Makefile
+++ b/io-cached/Makefile
@@ -1,18 +1,18 @@
 .PHONY: build
 build:
 	gcc -o app app.c
-	docker build -t feisky/app:io-direct -f Dockerfile .
+	docker build -t 192.168.200.120/perf/app:io-direct -f Dockerfile .
 	gcc -o app app-cached.c
-	docker build -t feisky/app:io-cached -f Dockerfile .
+	docker build -t 192.168.200.120/perf/app:io-cached -f Dockerfile .
 
 .PHONY: push
 push:
-	docker push feisky/app:io-direct
-	docker push feisky/app:io-cached
+	docker push 192.168.200.120/perf/app:io-direct
+	docker push 192.168.200.120/perf/app:io-cached
 
 .PHONY: run
 run:
-	docker run --privileged --name=app -itd feisky/app:io-direct
+	docker run --privileged --name=app -itd 192.168.200.120/perf/app:io-direct
 
 .PHONY: clean
 clean:
