--- a/io-latency/Makefile
+++ b/io-latency/Makefile
@@ -1,16 +1,16 @@
 .PHONY: run
 run:
-	docker run --name=app -p 10000:80 -itd feisky/word-pop
+	docker run --name=app -p 10000:80 -itd 192.168.200.120/perf/word-pop
 
 
 .PHONY: build
 build:
-	docker build -t feisky/word-pop -f Dockerfile .
+	docker build -t 192.168.200.120/perf/word-pop -f Dockerfile .
 
 
 .PHONY: push
 push:
-	docker push feisky/word-pop
+	docker push 192.168.200.120/perf/word-pop
 
 
 .PHONY: clean
