--- a/mysql-slow/Makefile
+++ b/mysql-slow/Makefile
@@ -2,16 +2,16 @@ DATA_NUM ?= 10000
 
 .PHONY: run
 run: mysql dataservice
-	docker run --name=app --network=container:mysql -itd feisky/mysql-slow
+	docker run --name=app --network=container:mysql -itd 192.168.200.120/perf/mysql-slow
 
 .PHONY: dataservice
 dataservice:
-	docker run --name=dataservice -itd --privileged feisky/mysql-dataservice
+	docker run --name=dataservice -itd --privileged 192.168.200.120/perf/mysql-dataservice
 
 
 .PHONY: mysql
 mysql:
-	docker run --name=mysql -itd -p 10000:80 -m 800m feisky/mysql:5.6
+	docker run --name=mysql -itd -p 10000:80 -m 800m 192.168.200.120/perf/mysql:5.6
 
 
 .PHONY: init
@@ -22,9 +22,9 @@ init:
 
 .PHONY: build
 build:
-	docker build -t feisky/mysql-slow -f Dockerfile .
-	docker build -t feisky/mysql:5.6 -f Dockerfile.mysql .
-	docker build -t feisky/mysql-dataservice -f Dockerfile.dataservice .
+	docker build -t 192.168.200.120/perf/mysql-slow -f Dockerfile .
+	docker build -t 192.168.200.120/perf/mysql:5.6 -f Dockerfile.mysql .
+	docker build -t 192.168.200.120/perf/mysql-dataservice -f Dockerfile.dataservice .
 
 
 .PHONY: test
@@ -34,9 +34,9 @@ test:
 
 .PHONY: push
 push:
-	docker push feisky/mysql-slow
-	docker push feisky/mysql:5.6
-	docker push feisky/mysql-dataservice
+	docker push 192.168.200.120/perf/mysql-slow
+	docker push 192.168.200.120/perf/mysql:5.6
+	docker push 192.168.200.120/perf/mysql-dataservice
 
 
 .PHONY: clean
